[project]
name = "common"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "ops>=2.9.0",
    "charm-refresh>=3.1.0.2",
    "charm-api>=0.1.2",
    "requests>=2.32.5",
    "tenacity>=9.1.2",
    "jinja2>=3.1.6",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# Formatting tools configuration
[tool.ruff]
# preview and explicit preview are enabled for CPY001
preview = true
target-version = "py38"
src = ["src", "."]
line-length = 99
exclude = [
    "_charm_libs"
]

[tool.ruff.lint]
explicit-preview-rules = true
select = ["A", "E", "W", "F", "C", "N", "D", "I", "CPY001"]
ignore = [
    # Missing docstring in public method (pydocstyle doesn't look for docstrings in super class
    # https://github.com/PyCQA/pydocstyle/issues/309) TODO: add pylint check? https://github.com/PyCQA/pydocstyle/issues/309#issuecomment-1284142716
    "D102",
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in __init__
    "D403", # First word of the first line should be capitalized (false positive on "MySQL")
    "D415", # Docstring first line punctuation (doesn't make sense for properties)
    "E501", # Line too long (because using black creates errors with this)
    "N818", # Exception name should be named with an Error suffix
    "W505", # Doc line too long (so that strings in comments aren't split across lines)
]

[tool.ruff.lint.per-file-ignores]
# D100, D101, D102, D103: Ignore missing docstrings in tests
"tests/*" = ["D1"]

[tool.ruff.lint.flake8-copyright]
# Check for properly formatted copyright header in each file
author = "Canonical Ltd."
notice-rgx = "Copyright\\s\\d{4}([-,]\\d{4})*\\s+"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"
